<?xml version="1.0"?>
<package format="3">
  <name>pagv_amr_core</name>
  <version>1.0.0</version>
  <description>PAGV AMR Core</description>
  <maintainer email="pagv@zenixrobotics.com">PAGV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
