<?xml version="1.0"?>
<package format="3">
  <name>pagv_bringup</name>
  <version>1.0.0</version>
  <description>PAGV Package</description>
  <maintainer email="pagv@zenixrobotics.com">PAGV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
